deleted education item

--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
                 <div class="two-column">
                     <div class="column">
                         <h3>About Me</h3>
-                        <p>i am Fellah Racha a Creative and detail-oriented Developer with strong skills in React, JavaScript, TypeScript, python i work with diffrent tools like Git, Github and more, i am Experienced in building responsive web applications and ensuring their security through best practices.
+                        <p>i am Fellah Racha a Creative and detail-oriented Developer with skills in React, JavaScript, TypeScript, python i work with diffrent tools like Git, Github and more, i am Experienced in building responsive web applications and ensuring their security through best practices.
                          <br> i am also a cybersecurity student and still developing my skills even more in this field.
                         <br>i also studied Biotechnology and have a background in molecular modelisation using Vim</p>
 
@@ -821,11 +821,7 @@
                             <h4> Systems and Network Cybersecurity - Mohammedia NIVT</h4>
                             <p>Learning to proactively defend, detect, and respond to cyber threats across an organization's digital infrastructure and network systems.</p>
                         </div>
-                        <div class="education-item">
-                            <div class="date">2023 - 2024</div>
-                            <h4> Introduction to front-end - Bab-Ezzouar Private school</h4>
-                            <p>learning front-end basics : html, css, js and to use github & git</p>
-                        </div>
+                       
                     </div>
                 </div>
             </section>
@@ -1011,7 +1007,7 @@
     </footer>
 
     <script>
-        
+
         function showCV(cvId) {
             // Hide all CV sections
             document.querySelectorAll('.cv-section').forEach(section => {
